--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,8 +15,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Get required packages
+      run: sudo apt-get update && sudo apt-get install libdbus-1-dev
     - uses: actions/checkout@v2
-    - name: Build
-      run: cargo build --verbose
+    - name: Check formatting
+      run: cargo fmt -- --check
+    - name: Clippy lints
+      run: cargo clippy --all-features --all-targets
+    - name: Build all features (release)
+      run: cargo build --all-features --all-targets --verbose --release
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --all-features --all-targets --verbose
