--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
   release:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ubuntu-18.04, macos-latest, windows-2019]
     steps:
@@ -46,11 +47,11 @@ jobs:
         fi
         mkdir $staging
         if [ "${{ matrix.os }}" = "windows-2019" ]; then
-          mv target/release/BeeBeep.exe $staging
+          mv target/release/beebeep.exe $staging
           7z a $staging.zip $staging
           echo "FILE=$staging.zip" >> $GITHUB_ENV
         else
-          mv target/release/BeeBeep $staging
+          mv target/release/beebeep $staging
           tar czf $staging.tar.gz $staging
           echo "FILE=$staging.tar.gz" >> $GITHUB_ENV
         fi
