Refactor and add linux support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,6 @@ teloxide = "0.5.0"
 log = "0.4.8"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 pretty_env_logger = "0.4.0"
-clap = "~2.27.0"
+clap = {version = "~2.27.0", features = ["yaml"]}
 dotenv = "0.15.0"
 notifica = "3.0"
